# rs-txt2img-web

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
src/: img_gen.rs  main.rs
