[package]
name = "rs-text2img-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
log = "0.4.20"
reqwest = { version = "*", features = ["json"] }
serde_json = { version = "*" }
serde = { version = "*" }
